# rdc

./: Cargo.toml  docs.sh  readme.md
assets/: sample_files.json  small.json
src/: main.rs  service.rs  utils.rs
