[package]
name = "rust-challenge"
version = "0.1.0"
authors = ["Aler Denisov <aler.zampillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
serde = "1.0.115"
serde_json = "1.0.57"
tokio = { version="0.2.22", features=["macros", "fs"]}
tokio-util = "0.3.1"
failure = "0.1.8"
env_logger = "0.7.1"
log = "0.4.11"